--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
       - SERVICES=lambda,s3,logs,dynamodb,cloudwatch,apigateway,cloudformation,iam,events
       - DEBUG=${DEBUG:-0}
+      - DOCKER_HOST=unix:///var/run/docker.sock
     volumes:
       - "~/tmp:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
